# coronetbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RULES.md  compose.yaml  pyproject.toml
resources/: forum-rules.md  moderation-agent-prompt.md
src/coronetbot/: __init__.py  __main__.py  auth.py  bot.py  config.py  formatting.py  models.py  moderator.py  state.py
tests/: test_bot.py  test_config.py  test_edits.py  test_formatting.py  test_models.py  test_moderator.py  test_policy.py  test_state.py
