[project]
name = "coronetbot"
version = "0.1.0"
description = "LLM-based Discord moderation bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "codex-backend-sdk==0.3.6",
  "discord.py>=2.5,<3",
  "pydantic>=2,<3",
]

[project.scripts]
coronetbot = "coronetbot.__main__:main"
coronetbot-auth = "coronetbot.auth:main"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coronetbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
